--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="number">9</div>
                     <div class="delete" id="btn-delete">X</div>
                 </div>
-                <div class="keshav">Made with <i class='bx bxs-heart bx-tada' ></i> by Keshav</div>
+                <div class="keshav">Made with <i class='bx bxs-heart bx-tada' ></i> by Keshav and Anirudh</div>
                 
             </div>
             <!-- end game screen -->
