--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="btn" id="btn-continue">Continue</div>
                 <div class="btn btn-blue" id="btn-play">New game</div>
 
-                <div class="keshav">Made with <i class='bx bxs-heart bx-tada' ></i> by Keshav</div>
+                <div class="keshav">Made with <i class='bx bxs-heart bx-tada' ></i> by Keshav and Anirudh</div>
             </div>
             <!-- end start screen -->
 
