--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="btn" id="btn-continue">Continue</div>
                 <div class="btn btn-blue" id="btn-play">New game</div>
 
-                <div class="keshav">Made with <i class='bx bxs-heart bx-tada' ></i> by Keshav and Anirudh</div>
+                <div class="keshav">Made with <i class='bx bxs-heart bx-tada' ></i> by Keshav & Anirudh</div>
             </div>
             <!-- end start screen -->
 
@@ -167,7 +167,7 @@
                     <div class="number">9</div>
                     <div class="delete" id="btn-delete">X</div>
                 </div>
-                <div class="keshav">Made with <i class='bx bxs-heart bx-tada' ></i> by Keshav and Anirudh</div>
+                <div class="keshav">Made with <i class='bx bxs-heart bx-tada' ></i> by Keshav & Anirudh</div>
                 
             </div>
             <!-- end game screen -->
